# onion-voxel

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  Notes.txt  README.md  ToDo.md  ToDo.txt
docs/: Notes.txt  (+5 more)
src/client/: CMakeLists.txt  main.cpp
src/client/src/: Client.cpp  Client.hpp  ClientConfiguration.hpp
src/client/src/network_client/: NetworkClient.cpp  NetworkClient.hpp
src/client/src/renderer/: EngineContext.hpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp  Variables.hpp
src/client/src/renderer/assets_manager/: AssetsManager.cpp  AssetsManager.hpp
src/client/src/renderer/assets_manager/resource_pack_manager/: ResourcePackManager.cpp  ResourcePackManager.hpp
src/client/src/renderer/camera/: Camera.cpp  Camera.hpp  FovSmoother.hpp
src/client/src/renderer/debug_draws/: DebugDraws.cpp  DebugDraws.hpp
src/client/src/renderer/entity_renderer/: EntityRenderer.cpp  EntityRenderer.hpp  TextureTileMapper.cpp  cuboid.cpp  cuboid.hpp  entity_renderer.cpp  entity_renderer.hpp  texture_tile_mapper.cpp  texture_tile_mapper.hpp
src/client/src/renderer/entity_renderer/skeleton/: SkeletonPlayer.cpp  SkeletonPlayer.hpp  skeleton.cpp  skeleton.hpp  skeleton_player.cpp  skeleton_player.hpp
src/client/src/renderer/gui/: Gui.cpp  Gui.hpp  GuiElement.cpp  GuiElement.hpp  LayoutHelper.hpp
src/client/src/renderer/gui/colored_background/: ColoredBackground.cpp  ColoredBackground.hpp
src/client/src/renderer/gui/font/: Font.cpp  Font.hpp  FontProvider.hpp
src/client/src/renderer/gui/nine_slice_sprite/: NineSliceSprite.cpp  NineSliceSprite.hpp
src/client/src/renderer/gui/ui_block_mesh/: UiBlockMesh.cpp  UiBlockMesh.hpp
src/client/src/renderer/inputs_manager/: README.md  inputs.hpp  inputs_manager.cpp  inputs_manager.hpp
src/client/src/renderer/key_binds/: KeyBinds.cpp  KeyBinds.hpp
src/client/src/renderer/shader/: shader.cpp  shader.hpp
src/client/src/renderer/skybox/: Skybox.cpp  Skybox.hpp
src/client/src/renderer/texture/: texture.cpp  texture.hpp
src/client/src/renderer/texture_atlas/: TextureAtlas.cpp  TextureAtlas.hpp
src/client/src/renderer/utils/: SinusPulseGenerator.hpp
src/client/src/renderer/world_renderer/: WorldRenderer.cpp  WorldRenderer.hpp
src/client/src/renderer/world_renderer/block_registry/: BlockModel.cpp  BlockModel.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockStateJson.cpp  BlockStateJson.hpp
src/client/src/renderer/world_renderer/block_render_registry/: BlockRenderRegistry.cpp  BlockRenderRegistry.hpp
src/client/src/user_settings/: UserSettings.cpp  UserSettings.hpp
src/client/src/user_settings/controls/: ControlsSettings.hpp
src/client/src/user_settings/quality_and_perf_settings/: QualityAndPerfSettings.hpp
src/client/src/user_settings/video_settings/: VideoSettings.hpp
src/server/: CMakeLists.txt  config_server.json  readme.txt
src/server/src/: Server.cpp  Server.hpp  ServerConfiguration.hpp  main.cpp
src/server/src/network_server/: NetworkServer.cpp  NetworkServer.hpp
src/server/src/world_generator/: SeededRandom.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/shared/: CMakeLists.txt
src/shared/shared/data_transfer_objects/DTOs/: BlockDTO.hpp  BlockStateDTO.hpp  ChunkDTO.hpp  DTOs.hpp  EntityDTO.hpp  ExperienceDTO.hpp  HealthDTO.hpp  HotbarDTO.hpp  HungerDTO.hpp  InventoryDTO.hpp  OutOfBoundsBlocksDTO.hpp  PhysicsBodyDTO.hpp  PlayerDTO.hpp  SubChunkDTO.hpp  TransformDTO.hpp
src/shared/shared/data_transfer_objects/serializer/: GlmSerialization.hpp  SerializerDTO.cpp  SerializerDTO.hpp
src/shared/shared/entities/components/: Experience.hpp  Health.hpp  Hotbar.hpp  Hunger.hpp  Inventory.hpp  PhysicsBody.hpp  Transform.hpp
src/shared/shared/entities/entity/: Entity.cpp  Entity.hpp  EntityTypes.hpp
src/shared/shared/entities/entity_manager/: EntityManager.cpp  EntityManager.hpp
src/shared/shared/http_file_downloader/: HttpFileDownloader.hpp
src/shared/shared/init_enet_once/: InitEnetOnce.hpp
src/shared/shared/network_messages/: GlmSerialization.hpp  MessageHeader.hpp  NetworkMessages.hpp  Serializer.cpp  Serializer.hpp  SerializerDTO.cpp  SerializerDTO.hpp
src/shared/shared/network_messages/DTOs/: BlockDTO.hpp  BlockStateDTO.hpp  DTOs.hpp  EntityDTO.hpp  PhysicsBodyDTO.hpp  PlayerDTO.hpp  SubChunkDTO.hpp  TransformDTO.hpp
src/shared/shared/network_messages/blocks_changed_msg/: BlocksChangedMsg.hpp
src/shared/shared/network_messages/chunk_data_msg/: ChunkDataMsg.hpp
src/shared/shared/network_messages/client_info_msg/: ClientInfoMsg.hpp
src/shared/shared/network_messages/entity_snapshot_msg/: EntitySnapshotMsg.hpp
src/shared/shared/network_messages/player_infos_msg/: PlayerInfosMsg.hpp
src/shared/shared/network_messages/request_chunks_msg/: RequestChunksMsg.hpp
src/shared/shared/network_messages/request_motd_msg/: RequestMotdMsg.hpp
src/shared/shared/network_messages/server_info_msg/: ServerInfoMsg.hpp
src/shared/shared/network_messages/server_motd_msg/: ServerMotdMsg.hpp
src/shared/shared/physics/: PhysicsEngine.cpp  PhysicsEngine.hpp
src/shared/shared/thread_safe_queue/: ThreadSafeQueue.hpp
src/shared/shared/utils/: Stopwatch.hpp  Utils.cpp  Utils.hpp
src/shared/shared/world/: World.hpp  WorldConstants.hpp
src/shared/shared/world/block/: Block.cpp  Block.hpp  BlockId.hpp  BlockIds.hpp  BlockModel.cpp  BlockModel.hpp  BlockPlacementResolver.cpp  BlockPlacementResolver.hpp  BlockState.cpp  BlockState.hpp  BlockStateJson.cpp  BlockStateJson.hpp  BlockUpdater.cpp  BlockUpdater.hpp  BlockstateRegistry.cpp  BlockstateRegistry.hpp
src/shared/shared/world/chunk/: Chunk.cpp  Chunk.hpp  SubChunk.cpp  SubChunk.hpp
src/shared/shared/world/raycast/: Raycast.cpp  Raycast.hpp
src/shared/shared/world/schematic/: Schematic.hpp
src/shared/shared/world/world_generator/: WorldGenerator.cpp  WorldGenerator.hpp
src/shared/shared/world/world_manager/: WorldManager.cpp  WorldManager.hpp
src/shared/shared/world/world_save/: WorldInfos.hpp  WorldSave.cpp  WorldSave.hpp
src/shared/shared/zip_archive/: ZipArchive.cpp  ZipArchive.hpp
(+113 files in other folders)
